# MathLibrary

./: CMakeLists.txt
src/: CMakeLists.txt
src/impl/: MathLibrary.cpp
src/include/: MathLibrary.h  Types.h
wrapper/native/common/include/: lib_export.h
wrapper/native/lib/impl/: mathlib_api.cpp
wrapper/native/lib/include/: mathlib_api.h
